--- a/style.css
+++ b/style.css
@@ -1,8 +1,5 @@
 body {
-    background-image: linear-gradient(
-        rgb(59,88,93),
-        rgb(29, 40, 42) 
-    );
+    background-image: linear-gradient(rgb(59, 88, 93),rgb(29, 40, 42));
     height: 100vh;
     color: white;
     font-family: sans-serif;
@@ -11,11 +8,18 @@ body {
     align-items: center;
 }
 
+button {
+    background-color: inherit;
+    color: inherit;
+    border: none;
+}
+
 #below-cover {
     display: flex;
     flex-direction: row;
     justify-content: space-between;
     align-items: center;
+    margin: 3em 0 1em 0;
 }
 
 #button-container {
@@ -47,4 +51,26 @@ body {
     justify-content: center;
     margin: 1em 0 4em 0;
 }
+#song-name {
+    font-size: 1.6em;
+    font-weight: bolder;
+}
 
+.ligth-color{
+    color: rgb(139 153 156);
+}
+
+#progress-bar {
+    background-color: rgb(139 153 156);
+    height: 3px;
+    width: 100%;
+    border-radius: 15px;
+    margin-bottom: 1em;
+}
+
+#current-progress{
+    background-color: white;
+    height: inherit;
+    width: 50%;
+    border-radius: inherit;
+}
