--- a/style.css
+++ b/style.css
@@ -31,6 +31,7 @@ button {
 
 .button {
     font-size: 1.5em;
+    cursor: pointer;
 }
 
 .button-navigate{
@@ -65,12 +66,21 @@ button {
     height: 3px;
     width: 100%;
     border-radius: 15px;
-    margin-bottom: 1em;
 }
 
 #current-progress{
+    --progress:0%;
     background-color: white;
     height: inherit;
-    width: 50%;
+    width: var(--progress);
     border-radius: inherit;
+}
+
+#progress-container {
+    padding-bottom: 1em;
+    cursor: pointer;
+}
+
+.button-active {
+    color: rgb(0, 128, 62);
 }
